@@ -1130,6 +1130,7 @@ Michael Simcich
 Ionel Simionescu
 Kirill Simonov
 Nathan Paul Simons
+Guilherme Simões
 Adam Simpkins
 Ravi Sinha
 Janne Sinkkonen
